--- a/smokyMountain/index.html
+++ b/smokyMountain/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Golden Moon</title>
     <link rel="stylesheet" type="text/css" href="source.css">
+    <script defer src="source.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -14,10 +15,13 @@
     <div id="firstContent" class="general-height image-height">
         <div id="scrollingImg">
             <img src="resource/Hex_Slide_1.jpg" class="image-height">
+            
         </div>
         <div id="leftArrow">
+            <img src="resource/left_arrow.png" class="arrow">
         </div>
         <div id="rightArrow">
+            <img src="resource/left_arrow.png" class="arrow right-side">
         </div>
     </div>
     <div id="footer">
@@ -32,14 +36,18 @@
     <div id="secondContent">
         <div id="secondContentOne" class="contentBoxOne">We believe
             <div class="line-one">We believe that we are all born creative, not just a lucky</div>
-            <div>Every one has got potential</div>
+            <div style="margin-left:-33px">Every one has got potential</div>
         </div>
         <div id="secondContentTwo" class="contentBoxTwo">We do
             <div class="line-one">We design modular art kits that result in highly dimensional</div>
-            <div>meaningful creative experiences.</div>
+            <div style="margin-left:-44px">meaningful creative experiences.</div>
         </div>
     </div>
-    <div id="videoDiv" class="general-height"></div>
+    <div id="videoDiv" class="general-height">
+        <video autoplay loop height="425px !important" width="1095px !important" style="margin-left:78px">
+            <source src="resource/sriramadasu.mp4" type="video/mp4">
+        </video>
+    </div>
     <hr>
     <div id="howWeDo" class="general-height">
         <div class="horizontal-block-list-view">
