--- a/smokyMountain/index.html
+++ b/smokyMountain/index.html
@@ -6,7 +6,7 @@
     <script defer src="source.js" type="text/javascript"></script>
 </head>
 
-<body>
+<body id="body">
     <div id="header">
         <div class="horizontal title">Golden Moon</div>
         <div class="space horizontal">shop</div>
@@ -43,6 +43,7 @@
             <div style="margin-left:-44px">meaningful creative experiences.</div>
         </div>
     </div>
+    <hr>
     <div id="videoDiv" class="general-height">
         <video autoplay loop height="425px !important" width="1095px !important" style="margin-left:78px">
             <source src="resource/sriramadasu.mp4" type="video/mp4">
