--- a/smokyMountain/index.html
+++ b/smokyMountain/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Golden Moon</title>
     <link rel="stylesheet" type="text/css" href="source.css">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <script defer src="source.js" type="text/javascript"></script>
     <!-- google map api -->
     <script src="http://maps.googleapis.com/maps/api/js"></script>
@@ -16,7 +17,7 @@
         <div class="space horizontal">shop</div>
         <div class="horizontal minutegap">cart</div>
     </div>
-    <div id="firstContent" class="general-height image-height">
+    <div id="firstContent" class="image-height ">
         <div id="scrollingImg">
             <img src="resource/Hex_Slide_1.jpg" class="image-height">
         </div>
@@ -39,39 +40,49 @@
     <div id="secondContent">
         <div id="secondContentOne" class="contentBoxOne">We believe
             <div class="line-one">We believe that we are all born creative, not just a lucky</div>
-            <div style="margin-left:-33px">Every one has got potential</div>
+            <div class="line-two">Every one has got potential</div>
         </div>
         <div id="secondContentTwo" class="contentBoxTwo">We do
             <div class="line-one">We design modular art kits that result in highly dimensional</div>
-            <div style="margin-left:-44px">meaningful creative experiences.</div>
+            <div class="line-two">meaningful creative experiences.</div>
         </div>
     </div>
     <hr>
-    <div id="videoDiv" class="general-height">
-        <video autoplay loop height="425px !important" width="1095px !important" style="margin-left:78px">
+    <div id="videoDiv">
+        <video autoplay loop height="425px !important" width="100% !important">
             <source src="resource/sriramadasu.mp4" type="video/mp4">
         </video>
     </div>
     <hr>
     <div id="howWeDo" class="general-height">
-        <div class="horizontal-block-list-view">
-            <img src="resource/easily-mounted.jpg">
+        <div class="horizontal-block-list-view thirdBlock">
+            <img src="resource/easily-mounted.jpg" style=" width: 85%; height: 31%;">
             <div class="BiggerText">Bigger Text</div>
             <div class="smallerText">There are infinite possibilities to composing your art. You are original, your art should be too.</div>
         </div>
-        <div class="horizontal-block-list-view">
-            <img src="resource/easily-mounted.jpg">
+        <div class="horizontal-block-list-view thirdBlock">
+            <img src="resource/easily-mounted.jpg" style=" width: 85%; height: 31%;">
             <div class="BiggerText">Bigger Text</div>
             <div class="smallerText">There are infinite possibilities to composing your art. You are original, your art should be too.</div>
         </div>
-        <div class="horizontal-block-list-view">
-            <img src="resource/easily-mounted.jpg">
+        <div class="horizontal-block-list-view thirdBlock">
+            <img src="resource/easily-mounted.jpg" style=" width: 85%; height: 31%;">
             <div class="BiggerText">Bigger Text</div>
             <div class="smallerText">There are infinite possibilities to composing your art. You are original, your art should be too.</div>
         </div>
     </div>
     <hr>
+    <div class="BiggerText">Check out our locations nearby!!!</div>
     <div id="googleMap" class="map"></div>
+    <hr>
+    <div id="contactus"></div>
+    <div id="address">
+        <div>Address</div>
+        <div>Contact No</div>
+        <div>Share</div>
+        <div>Like</div>
+        <div>Follow</div>
+    </div>
 </body>
 
 </html>
