Implementation of fragment identifier for scrolling
hashing in url

--- a/smokyMountain/index.html
+++ b/smokyMountain/index.html
@@ -72,6 +72,7 @@
         </div>
     </div>
     <hr>
+    <a href="#body">Go TOP</a>
     <div class="BiggerText">Check out our locations nearby!!!</div>
     <div id="googleMap" class="map"></div>
     <hr>
